# mediavault

./: .gitignore  App.axaml  App.axaml.cs  MediaVault.csproj  Program.cs  README.md  ViewLocator.cs  app.js  app.manifest  index.html  package-lock.json  package.json  start.bat  start.sh  style.css
.github/workflows/: release.yml
Assets/: Styles.axaml
Assets/Themes/: Caramel.axaml  DarkPurple.axaml  DeepSpace.axaml  Emerald.axaml  Light.axaml  Rose.axaml
Controls/: MasonryPanel.cs  MediaCard.axaml  MediaCard.axaml.cs
Models/: FolderNode.cs  MediaFile.cs
Services/: MediaImportService.cs  ThumbnailService.cs  VlcService.cs
ViewModels/: MainWindowViewModel.cs  MediaCardViewModel.cs  PlayerViewModel.cs  ViewModelBase.cs
Views/: MainWindow.axaml  MainWindow.axaml.cs  PlayerWindow.axaml  PlayerWindow.axaml.cs
src/: App.tsx  store.ts  style.css  types.ts  utils.ts  videoPool.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/components/: DropZone.tsx  Header.tsx  MediaCard.tsx  MediaGrid.tsx  MiniPlayer.tsx  PlayerModal.tsx  Subbar.tsx
